--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,7 @@
 name: itvlist
 on:
-  workflow_dispatch:
-    inputs:
-      input:
-        description: "Test"
-        required: true
-        default: "run"   
+  schedule:
+    - cron: '0 6 * * *'
 jobs:
   build:
     runs-on: ubuntu-latest
