--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,11 @@
 name: itvlist
 on:
-  schedule:
-    - cron: '0 6 * * *'
+  workflow_dispatch:
+    inputs:
+      input:
+        description: "Test"
+        required: true
+        default: "run"  
 jobs:
   build:
     runs-on: ubuntu-latest
