--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,12 @@
 name: itvlist
 on:
+ push:
   schedule:
-    - cron: '0 6,10,14 * * *'
+   - name: daily_task
+     description: Run task every day at 4:00 PM
+     cron: "0 16 * * *"
+  branches:
+   - main
 jobs:
   build:
     runs-on: ubuntu-latest
